#35: Implement fixed port usage