@@ -4,14 +4,20 @@ import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.concurrent.*;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
+import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
 
 @RequiredArgsConstructor
-public final class ParallelRunner<T, R> {
+public final class ParallelFnRunner<T, R> {
 
+    private static final int MAX_THREADS = 4;
     private static final int TIMEOUT = 10;
     List<Supplier<T>> suppliers;
 
@@ -20,9 +26,9 @@ public final class ParallelRunner<T, R> {
         var size = suppliers.size();
         if (size == 1) {
             var value = suppliers.get(0).get();
-            return List.of(function.apply(value));
+            return Collections.singletonList(function.apply(value));
         } else if (size > 1) {
-            var executor = Executors.newFixedThreadPool(size);
+            var executor = Executors.newFixedThreadPool(Math.min(size, MAX_THREADS));
             var latch = new CountDownLatch(size);
             var results = new ArrayList<R>(size);
             for (var i = 0; i < size; i++) {
@@ -39,5 +45,13 @@ public final class ParallelRunner<T, R> {
         } else {
             return List.of();
         }
+    }
+
+    @SneakyThrows
+    public void doParallel(Consumer<T> consumer) {
+        doParallel(value -> {
+            consumer.accept(value);
+            return null;
+        });
     }
 }
